# nba-watchability-index

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: pyproject.toml
backend/data/: views.py
backend/nba_watchability_index/nba_watchability_index/: settings.py  urls.py
docker/: Dockerfile.api
nba_watchability_index/: manage.py
nba_watchability_index/conf/: __init__.py  load_config.py
nba_watchability_index/data/: models.py  serializers.py  urls.py  views.py
nba_watchability_index/data/conf/: load_config.py
nba_watchability_index/data/fixtures/: initial_data.json
nba_watchability_index/data/management/commands/: get_player_fixtures.py
nba_watchability_index/data/migrations/: 0001_initial.py
nba_watchability_index/nba_watchability_index/: asgi.py  settings.py  urls.py  wsgi.py
nba_watchability_index/users/fixtures/: initial_data.json
nba_watchability_index/users/management/commands/: generate_user_fixtures.py
scraping/: scraper.py
startup_scripts/: entrypoint.sh  wait-for-it.sh
stat_scripts/: scoring_streaks.py
static/: all_bbref_players.csv
