[tool.poetry]
name = "backend"
version = "0.1.0"
description = "backend for NBA watchability index app"
authors = ["nihalraman <43160723+nihalraman@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
